src/parser/XPath2Parser.output
Grammar

    0 $accept: _XPath $end

    1 _XPath: /* empty */
    2       | _Expr

    3 _Expr: _Expr _COMMA_ _ExprSingle
    4      | _ExprSingle

    5 _ExprSingle: _ForExpr
    6            | _QuantifiedExpr
    7            | _IfExpr
    8            | _OrExpr

    9 _ForExpr: _SimpleForClause _RETURN_ _ExprSingle

   10 _SimpleForClause: _FOR_ _VariableBindingList

   11 _QuantifiedExpr: _SOME_ _VariableBindingList _SATISFIES_ _ExprSingle
   12                | _EVERY_ _VariableBindingList _SATISFIES_ _ExprSingle

   13 _VariableBindingList: _VariableBindingList _COMMA_ _VARNAME_ _IN_ _ExprSingle
   14                     | _VARNAME_ _IN_ _ExprSingle

   15 _IfExpr: _IF_LPAR_ _Expr _RPAR_ _THEN_ _ExprSingle _ELSE_ _ExprSingle

   16 _OrExpr: _AndExpr
   17        | _OrExpr _OR_ _AndExpr

   18 _AndExpr: _ComparisonExpr
   19         | _AndExpr _AND_ _ComparisonExpr

   20 _ComparisonExpr: _RangeExpr
   21                | _RangeExpr _EQUALS_ _RangeExpr
   22                | _RangeExpr _NOT_EQUALS_ _RangeExpr
   23                | _RangeExpr _LT_ _RangeExpr
   24                | _RangeExpr _LT_EQUALS_ _RangeExpr
   25                | _RangeExpr _GT_ _RangeExpr
   26                | _RangeExpr _GT_EQUALS_ _RangeExpr
   27                | _RangeExpr _FORTRAN_EQ_ _RangeExpr
   28                | _RangeExpr _FORTRAN_NE_ _RangeExpr
   29                | _RangeExpr _FORTRAN_LT_ _RangeExpr
   30                | _RangeExpr _FORTRAN_LE_ _RangeExpr
   31                | _RangeExpr _FORTRAN_GT_ _RangeExpr
   32                | _RangeExpr _FORTRAN_GE_ _RangeExpr
   33                | _RangeExpr _IS_ _RangeExpr
   34                | _RangeExpr _LT_LT_ _RangeExpr
   35                | _RangeExpr _GT_GT_ _RangeExpr

   36 _RangeExpr: _AdditiveExpr
   37           | _AdditiveExpr _TO_ _AdditiveExpr

   38 _AdditiveExpr: _MultiplicativeExpr
   39              | _AdditiveExpr _PLUS_ _MultiplicativeExpr
   40              | _AdditiveExpr _MINUS_ _MultiplicativeExpr

   41 _MultiplicativeExpr: _UnionExpr
   42                    | _MultiplicativeExpr _MULTIPLY_ _UnionExpr
   43                    | _MultiplicativeExpr _DIV_ _UnionExpr
   44                    | _MultiplicativeExpr _INTEGER_DIV_ _UnionExpr
   45                    | _MultiplicativeExpr _MOD_ _UnionExpr

   46 _UnionExpr: _IntersectExceptExpr
   47           | _UnionExpr _UNION_ _IntersectExceptExpr
   48           | _UnionExpr _VERTICAL_BAR_ _IntersectExceptExpr

   49 _IntersectExceptExpr: _InstanceOfExpr
   50                     | _IntersectExceptExpr _INTERSECT_ _InstanceOfExpr
   51                     | _IntersectExceptExpr _EXCEPT_ _InstanceOfExpr

   52 _InstanceOfExpr: _TreatExpr
   53                | _TreatExpr _INSTANCE_OF_ _SequenceType

   54 _TreatExpr: _CastableExpr
   55           | _CastableExpr _TREAT_AS_ _SequenceType

   56 _CastableExpr: _CastExpr
   57              | _CastExpr _CASTABLE_AS_ _SingleType

   58 _CastExpr: _UnaryExpr
   59          | _UnaryExpr _CAST_AS_ _SingleType

   60 _UnaryExpr: _ValueExpr
   61           | _MINUS_ _UnaryExpr
   62           | _PLUS_ _UnaryExpr

   63 _ValueExpr: _PathExpr

   64 _PathExpr: _SLASH_
   65          | _SLASH_ _RelativePathExpr
   66          | _SLASHSLASH_ _RelativePathExpr
   67          | _RelativePathExpr

   68 _RelativePathExpr: _StepExpr
   69                  | _RelativePathExpr _SLASH_ _StepExpr
   70                  | _RelativePathExpr _SLASHSLASH_ _StepExpr

   71 _StepExpr: _AxisStep
   72          | _FilterExpr

   73 _AxisStep: _ForwardStep _PredicateList
   74          | _ReverseStep _PredicateList

   75 _ForwardStep: _ForwardAxis _NodeTest
   76             | _AbbrevForwardStep

   77 _ForwardAxis: _AXIS_CHILD_
   78             | _AXIS_DESCENDANT_
   79             | _AXIS_ATTRIBUTE_
   80             | _AXIS_SELF_
   81             | _AXIS_DESCENDANT_OR_SELF_
   82             | _AXIS_FOLLOWING_SIBLING_
   83             | _AXIS_FOLLOWING_
   84             | _AXIS_NAMESPACE_

   85 _AbbrevForwardStep: _AT_ _NodeTest
   86                   | _NodeTest

   87 _ReverseStep: _ReverseAxis _NodeTest
   88             | _AbbrevReverseStep

   89 _ReverseAxis: _AXIS_PARENT_
   90             | _AXIS_ANCESTOR_
   91             | _AXIS_PRECEDING_SIBLING_
   92             | _AXIS_PRECEDING_
   93             | _AXIS_ANCESTOR_OR_SELF_

   94 _AbbrevReverseStep: _DOT_DOT_

   95 _NodeTest: _KindTest
   96          | _NameTest

   97 _NameTest: _QName
   98          | _Wildcard

   99 _Wildcard: _STAR_
  100          | _NCNAME_COLON_STAR_
  101          | _STAR_COLON_NCNAME_

  102 _FilterExpr: _PrimaryExpr _PredicateList

  103 _PredicateList: /* empty */
  104               | _PredicateList _Predicate

  105 _Predicate: _LBRACK_ _Expr _RBRACK_

  106 _PrimaryExpr: _Literal
  107             | _VarRef
  108             | _ParenthesizedExpr
  109             | _ContextItemExpr
  110             | _FunctionCall

  111 _Literal: _NumericLiteral
  112         | _STRING_LITERAL_

  113 _NumericLiteral: _INTEGER_LITERAL_
  114                | _DECIMAL_LITERAL_
  115                | _DOUBLE_LITERAL_

  116 _VarRef: _VARNAME_

  117 _ParenthesizedExpr: _LPAR_ _Expr _RPAR_
  118                   | _LPAR_ _RPAR_

  119 _ContextItemExpr: _DOT_

  120 _FunctionCall: _QNAME_LPAR_ _RPAR_
  121              | _QNAME_LPAR_ _ArgumentList _RPAR_

  122 _ArgumentList: _ExprSingle
  123              | _ArgumentList _COMMA_ _ExprSingle

  124 _SingleType: _AtomicType
  125            | _AtomicType _QUESTION_

  126 _SequenceType: _ItemType _OccurrenceIndicator
  127              | _ItemType
  128              | _EMPTY_

  129 _OccurrenceIndicator: _ZERO_OR_MORE_
  130                     | _ONE_OR_MORE_
  131                     | _ZERO_OR_ONE_

  132 _ItemType: _AtomicType
  133          | _KindTest
  134          | _ITEM_

  135 _AtomicType: _QName

  136 _KindTest: _DocumentTest
  137          | _ElementTest
  138          | _AttributeTest
  139          | _SchemaElementTest
  140          | _SchemaAttributeTest
  141          | _PITest
  142          | _CommentTest
  143          | _TextTest
  144          | _AnyKindTest

  145 _AnyKindTest: _NODE_LPAR_ _RPAR_

  146 _DocumentTest: _DOCUMENT_NODE_LPAR_ _RPAR_
  147              | _DOCUMENT_NODE_LPAR_ _ElementTest _RPAR_
  148              | _DOCUMENT_NODE_LPAR_ _SchemaElementTest _RPAR_

  149 _TextTest: _TEXT_LPAR_ _RPAR_

  150 _CommentTest: _COMMENT_LPAR_ _RPAR_

  151 _PITest: _PROCESSING_INSTRUCTION_LPAR_ _STRING_LITERAL_ _RPAR_
  152        | _PROCESSING_INSTRUCTION_LPAR_ _NCNAME_ _RPAR_
  153        | _PROCESSING_INSTRUCTION_LPAR_ _RPAR_

  154 _AttributeTest: _ATTRIBUTE_LPAR_ _RPAR_
  155               | _ATTRIBUTE_LPAR_ _AttribNameOrWildcard _RPAR_
  156               | _ATTRIBUTE_LPAR_ _AttribNameOrWildcard _COMMA_ _TypeName _RPAR_

  157 _AttribNameOrWildcard: _AttributeName
  158                      | _STAR_

  159 _SchemaAttributeTest: _SCHEMA_ATTRIBUTE_LPAR_ _AttributeDeclaration _RPAR_

  160 _AttributeDeclaration: _AttributeName

  161 _ElementTest: _ELEMENT_LPAR_ _RPAR_
  162             | _ELEMENT_LPAR_ _ElementNameOrWildcard _RPAR_
  163             | _ELEMENT_LPAR_ _ElementNameOrWildcard _COMMA_ _TypeName _RPAR_
  164             | _ELEMENT_LPAR_ _ElementNameOrWildcard _COMMA_ _TypeName _NILLABLE_ _RPAR_

  165 _ElementNameOrWildcard: _ElementName
  166                       | _STAR_

  167 _SchemaElementTest: _SCHEMA_ELEMENT_LPAR_ _ElementDeclaration _RPAR_

  168 _ElementDeclaration: _ElementName

  169 _AttributeName: _QName

  170 _ElementName: _QName

  171 _TypeName: _QName

  172 _QName: _QNAME_


Terminals, with rules where they appear

$end (0) 0
error (256)
_QUESTION_ (258) 125
_LBRACK_ (259) 105
_RBRACK_ (260) 105
_PLUS_ (261) 39 62
_MINUS_ (262) 40 61
_STAR_ (263) 99 158 166
_NCNAME_COLON_STAR_ (264) 100
_STAR_COLON_NCNAME_ (265) 101
_DOT_ (266) 119
_DOT_DOT_ (267) 94
_STRING_LITERAL_ (268) 112 151
_SLASH_ (269) 64 65 69
_SLASHSLASH_ (270) 66 70
_AXIS_CHILD_ (271) 77
_AXIS_DESCENDANT_ (272) 78
_AXIS_PARENT_ (273) 89
_AXIS_ATTRIBUTE_ (274) 79
_AXIS_SELF_ (275) 80
_AXIS_DESCENDANT_OR_SELF_ (276) 81
_AXIS_ANCESTOR_ (277) 90
_AXIS_FOLLOWING_SIBLING_ (278) 82
_AXIS_PRECEDING_SIBLING_ (279) 91
_AXIS_FOLLOWING_ (280) 83
_AXIS_PRECEDING_ (281) 92
_AXIS_NAMESPACE_ (282) 84
_AXIS_ANCESTOR_OR_SELF_ (283) 93
_AT_ (284) 85
_CAST_AS_ (285) 59
_TREAT_AS_ (286) 55
_FOR_ (287) 10
_SOME_ (288) 11
_EVERY_ (289) 12
_COMMA_ (290) 3 13 123 156 163 164
_LPAR_ (291) 117 118
_TEXT_LPAR_ (292) 149
_COMMENT_LPAR_ (293) 150
_NODE_LPAR_ (294) 145
_PROCESSING_INSTRUCTION_LPAR_ (295) 151 152 153
_ELEMENT_LPAR_ (296) 161 162 163 164
_ATTRIBUTE_LPAR_ (297) 154 155 156
_SCHEMA_ELEMENT_LPAR_ (298) 167
_SCHEMA_ATTRIBUTE_LPAR_ (299) 159
_DOCUMENT_NODE_LPAR_ (300) 146 147 148
_IF_LPAR_ (301) 15
_QNAME_LPAR_ (302) 120 121
_RPAR_ (303) 15 117 118 120 121 145 146 147 148 149 150 151 152 153
    154 155 156 159 161 162 163 164 167
_MULTIPLY_ (304) 42
_DIV_ (305) 43
_INTEGER_DIV_ (306) 44
_MOD_ (307) 45
_AND_ (308) 19
_OR_ (309) 17
_RETURN_ (310) 9
_THEN_ (311) 15
_ELSE_ (312) 15
_TO_ (313) 37
_UNION_ (314) 47
_INTERSECT_ (315) 50
_EXCEPT_ (316) 51
_EQUALS_ (317) 21
_IS_ (318) 33
_NOT_EQUALS_ (319) 22
_LT_EQUALS_ (320) 24
_GT_EQUALS_ (321) 26
_LT_ (322) 23
_GT_ (323) 25
_VERTICAL_BAR_ (324) 48
_LT_LT_ (325) 34
_GT_GT_ (326) 35
_FORTRAN_EQ_ (327) 27
_FORTRAN_NE_ (328) 28
_FORTRAN_GT_ (329) 31
_FORTRAN_GE_ (330) 32
_FORTRAN_LT_ (331) 29
_FORTRAN_LE_ (332) 30
_IN_ (333) 13 14
_SATISFIES_ (334) 11 12
_ITEM_ (335) 134
_EMPTY_ (336) 128
_INSTANCE_OF_ (337) 53
_CASTABLE_AS_ (338) 57
_NILLABLE_ (339) 164
_ZERO_OR_ONE_ (340) 131
_ONE_OR_MORE_ (341) 130
_ZERO_OR_MORE_ (342) 129
_VARNAME_ (343) 13 14 116
_QNAME_ (344) 172
_NCNAME_ (345) 152
_INTEGER_LITERAL_ (346) 113
_DECIMAL_LITERAL_ (347) 114
_DOUBLE_LITERAL_ (348) 115


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
_XPath (95)
    on left: 1 2, on right: 0
_Expr (96)
    on left: 3 4, on right: 2 3 15 105 117
_ExprSingle (97)
    on left: 5 6 7 8, on right: 3 4 9 11 12 13 14 15 122 123
_ForExpr (98)
    on left: 9, on right: 5
_SimpleForClause (99)
    on left: 10, on right: 9
_QuantifiedExpr (100)
    on left: 11 12, on right: 6
_VariableBindingList (101)
    on left: 13 14, on right: 10 11 12 13
_IfExpr (102)
    on left: 15, on right: 7
_OrExpr (103)
    on left: 16 17, on right: 8 17
_AndExpr (104)
    on left: 18 19, on right: 16 17 19
_ComparisonExpr (105)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35,
    on right: 18 19
_RangeExpr (106)
    on left: 36 37, on right: 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35
_AdditiveExpr (107)
    on left: 38 39 40, on right: 36 37 39 40
_MultiplicativeExpr (108)
    on left: 41 42 43 44 45, on right: 38 39 40 42 43 44 45
_UnionExpr (109)
    on left: 46 47 48, on right: 41 42 43 44 45 47 48
_IntersectExceptExpr (110)
    on left: 49 50 51, on right: 46 47 48 50 51
_InstanceOfExpr (111)
    on left: 52 53, on right: 49 50 51
_TreatExpr (112)
    on left: 54 55, on right: 52 53
_CastableExpr (113)
    on left: 56 57, on right: 54 55
_CastExpr (114)
    on left: 58 59, on right: 56 57
_UnaryExpr (115)
    on left: 60 61 62, on right: 58 59 61 62
_ValueExpr (116)
    on left: 63, on right: 60
_PathExpr (117)
    on left: 64 65 66 67, on right: 63
_RelativePathExpr (118)
    on left: 68 69 70, on right: 65 66 67 69 70
_StepExpr (119)
    on left: 71 72, on right: 68 69 70
_AxisStep (120)
    on left: 73 74, on right: 71
_ForwardStep (121)
    on left: 75 76, on right: 73
_ForwardAxis (122)
    on left: 77 78 79 80 81 82 83 84, on right: 75
_AbbrevForwardStep (123)
    on left: 85 86, on right: 76
_ReverseStep (124)
    on left: 87 88, on right: 74
_ReverseAxis (125)
    on left: 89 90 91 92 93, on right: 87
_AbbrevReverseStep (126)
    on left: 94, on right: 88
_NodeTest (127)
    on left: 95 96, on right: 75 85 86 87
_NameTest (128)
    on left: 97 98, on right: 96
_Wildcard (129)
    on left: 99 100 101, on right: 98
_FilterExpr (130)
    on left: 102, on right: 72
_PredicateList (131)
    on left: 103 104, on right: 73 74 102 104
_Predicate (132)
    on left: 105, on right: 104
_PrimaryExpr (133)
    on left: 106 107 108 109 110, on right: 102
_Literal (134)
    on left: 111 112, on right: 106
_NumericLiteral (135)
    on left: 113 114 115, on right: 111
_VarRef (136)
    on left: 116, on right: 107
_ParenthesizedExpr (137)
    on left: 117 118, on right: 108
_ContextItemExpr (138)
    on left: 119, on right: 109
_FunctionCall (139)
    on left: 120 121, on right: 110
_ArgumentList (140)
    on left: 122 123, on right: 121 123
_SingleType (141)
    on left: 124 125, on right: 57 59
_SequenceType (142)
    on left: 126 127 128, on right: 53 55
_OccurrenceIndicator (143)
    on left: 129 130 131, on right: 126
_ItemType (144)
    on left: 132 133 134, on right: 126 127
_AtomicType (145)
    on left: 135, on right: 124 125 132
_KindTest (146)
    on left: 136 137 138 139 140 141 142 143 144, on right: 95 133
_AnyKindTest (147)
    on left: 145, on right: 144
_DocumentTest (148)
    on left: 146 147 148, on right: 136
_TextTest (149)
    on left: 149, on right: 143
_CommentTest (150)
    on left: 150, on right: 142
_PITest (151)
    on left: 151 152 153, on right: 141
_AttributeTest (152)
    on left: 154 155 156, on right: 138
_AttribNameOrWildcard (153)
    on left: 157 158, on right: 155 156
_SchemaAttributeTest (154)
    on left: 159, on right: 140
_AttributeDeclaration (155)
    on left: 160, on right: 159
_ElementTest (156)
    on left: 161 162 163 164, on right: 137 147
_ElementNameOrWildcard (157)
    on left: 165 166, on right: 162 163 164
_SchemaElementTest (158)
    on left: 167, on right: 139 148
_ElementDeclaration (159)
    on left: 168, on right: 167
_AttributeName (160)
    on left: 169, on right: 157 160
_ElementName (161)
    on left: 170, on right: 165 168
_TypeName (162)
    on left: 171, on right: 156 163 164
_QName (163)
    on left: 172, on right: 97 135 169 170 171


state 0

    0 $accept: . _XPath $end

    _PLUS_                         shift, and go to state 1
    _MINUS_                        shift, and go to state 2
    _STAR_                         shift, and go to state 3
    _NCNAME_COLON_STAR_            shift, and go to state 4
    _STAR_COLON_NCNAME_            shift, and go to state 5
    _DOT_                          shift, and go to state 6
    _DOT_DOT_                      shift, and go to state 7
    _STRING_LITERAL_               shift, and go to state 8
    _SLASH_                        shift, and go to state 9
    _SLASHSLASH_                   shift, and go to state 10
    _AXIS_CHILD_                   shift, and go to state 11
    _AXIS_DESCENDANT_              shift, and go to state 12
    _AXIS_PARENT_                  shift, and go to state 13
    _AXIS_ATTRIBUTE_               shift, and go to state 14
    _AXIS_SELF_                    shift, and go to state 15
    _AXIS_DESCENDANT_OR_SELF_      shift, and go to state 16
    _AXIS_ANCESTOR_                shift, and go to state 17
    _AXIS_FOLLOWING_SIBLING_       shift, and go to state 18
    _AXIS_PRECEDING_SIBLING_       shift, and go to state 19
    _AXIS_FOLLOWING_               shift, and go to state 20
    _AXIS_PRECEDING_               shift, and go to state 21
    _AXIS_NAMESPACE_               shift, and go to state 22
    _AXIS_ANCESTOR_OR_SELF_        shift, and go to state 23
    _AT_                           shift, and go to state 24
    _FOR_                          shift, and go to state 25
    _SOME_                         shift, and go to state 26
    _EVERY_                        shift, and go to state 27
    _LPAR_                         shift, and go to state 28
    _TEXT_LPAR_                    shift, and go to state 29
    _COMMENT_LPAR_                 shift, and go to state 30
    _NODE_LPAR_                    shift, and go to state 31
    _PROCESSING_INSTRUCTION_LPAR_  shift, and go to state 32
    _ELEMENT_LPAR_                 shift, and go to state 33
    _ATTRIBUTE_LPAR_               shift, and go to state 34
    _SCHEMA_ELEMENT_LPAR_          shift, and go to state 35
    _SCHEMA_ATTRIBUTE_LPAR_        shift, and go to state 36
    _DOCUMENT_NODE_LPAR_           shift, and go to state 37
    _IF_LPAR_                      shift, and go to state 38
    _QNAME_LPAR_                   shift, and go to state 39
    _VARNAME_                      shift, and go to state 40
    _QNAME_                        shift, and go to state 41
    _INTEGER_LITERAL_              shift, and go to state 42
    _DECIMAL_LITERAL_              shift, and go to state 43
    _DOUBLE_LITERAL_               shift, and go to state 44

    $default  reduce using rule 1 (_XPath)

    _XPath                go to state 45
    _Expr                 go to state 46
    _ExprSingle           go to state 47
    _ForExpr              go to state 48
    _SimpleForClause      go to state 49
    _QuantifiedExpr       go to state 50
    _IfExpr               go to state 51
    _OrExpr               go to state 52
    _AndExpr              go to state 53
    _ComparisonExpr       go to state 54
    _RangeExpr            go to state 55
    _AdditiveExpr         go to state 56
    _MultiplicativeExpr   go to state 57
    _UnionExpr            go to state 58
    _IntersectExceptExpr  go to state 59
    _InstanceOfExpr       go to state 60
    _TreatExpr            go to state 61
    _CastableExpr         go to state 62
    _CastExpr             go to state 63
    _UnaryExpr            go to state 64
    _ValueExpr            go to state 65
    _PathExpr             go to state 66
    _RelativePathExpr     go to state 67
    _StepExpr             go to state 68
    _AxisStep             go to state 69
    _ForwardStep          go to state 70
    _ForwardAxis          go to state 71
    _AbbrevForwardStep    go to state 72
    _ReverseStep          go to state 73
    _ReverseAxis          go to state 74
    _AbbrevReverseStep    go to state 75
    _NodeTest             go to state 76
    _NameTest             go to state 77
    _Wildcard             go to state 78
    _FilterExpr           go to state 79
    _PrimaryExpr          go to state 80
    _Literal              go to state 81
    _NumericLiteral       go to state 82
    _VarRef               go to state 83
    _ParenthesizedExpr    go to state 84
    _ContextItemExpr      go to state 85
    _FunctionCall         go to state 86
    _KindTest             go to state 87
    _AnyKindTest          go to state 88
    _DocumentTest         go to state 89
    _TextTest             go to state 90
    _CommentTest          go to state 91
    _PITest               go to state 92
    _AttributeTest        go to state 93
    _SchemaAttributeTest  go to state 94
    _ElementTest          go to state 95
    _SchemaElementTest    go to state 96
    _QName                go to state 97


state 1

   62 _UnaryExpr: _PLUS_ . _UnaryExpr

    _PLUS_                         shift, and go to state 1
    _MINUS_                        shift, and go to state 2
    _STAR_                         shift, and go to state 3
    _NCNAME_COLON_STAR_            shift, and go to state 4
    _STAR_COLON_NCNAME_            shift, and go to state 5
    _DOT_                          shift, and go to state 6
    _DOT_DOT_                      shift, and go to state 7
    _STRING_LITERAL_               shift, and go to state 8
    _SLASH_                        shift, and go to state 9
    _SLASHSLASH_                   shift, and go to state 10
    _AXIS_CHILD_                   shift, and go to state 11
    _AXIS_DESCENDANT_              shift, and go to state 12
    _AXIS_PARENT_                  shift, and go to state 13
    _AXIS_ATTRIBUTE_               shift, and go to state 14
    _AXIS_SELF_                    shift, and go to state 15
    _AXIS_DESCENDANT_OR_SELF_      shift, and go to state 16
    _AXIS_ANCESTOR_                shift, and go to state 17
    _AXIS_FOLLOWING_SIBLING_       shift, and go to state 18
    _AXIS_PRECEDING_SIBLING_       shift, and go to state 19
    _AXIS_FOLLOWING_               shift, and go to state 20
    _AXIS_PRECEDING_               shift, and go to state 21
    _AXIS_NAMESPACE_               shift, and go to state 22
    _AXIS_ANCESTOR_OR_SELF_        shift, and go to state 23
    _AT_                           shift, and go to state 24
    _LPAR_                         shift, and go to state 28
    _TEXT_LPAR_                    shift, and go to state 29
    _COMMENT_LPAR_                 shift, and go to state 30
    _NODE_LPAR_                    shift, and go to state 31
    _PROCESSING_INSTRUCTION_LPAR_  shift, and go to state 32
    _ELEMENT_LPAR_                 shift, and go to state 33
    _ATTRIBUTE_LPAR_               shift, and go to state 34
    _SCHEMA_ELEMENT_LPAR_          shift, and go to state 35
    _SCHEMA_ATTRIBUTE_LPAR_        shift, and go to state 36
    _DOCUMENT_NODE_LPAR_           shift, and go to state 37
    _QNAME_LPAR_                   shift, and go to state 39
    _VARNAME_                      shift, and go to state 40
    _QNAME_                        shift, and go to state 41
    _INTEGER_LITERAL_              shift, and go to state 42
    _DECIMAL_LITERAL_              shift, and go to state 43
    _DOUBLE_LITERAL_               shift, and go to state 44

    _UnaryExpr            go to state 98
    _ValueExpr            go to state 65
    _PathExpr             go to state 66
    _RelativePathExpr     go to state 67
    _StepExpr             go to state 68
    _AxisStep             go to state 69
    _ForwardStep          go to state 70
    _ForwardAxis          go to state 71
    _AbbrevForwardStep    go to state 72
    _ReverseStep          go to state 73
    _ReverseAxis          go to state 74
    _AbbrevReverseStep    go to state 75
    _NodeTest             go to state 76
    _NameTest             go to state 77
    _Wildcard             go to state 78
    _FilterExpr           go to state 79
    _PrimaryExpr          go to state 80
    _Literal              go to state 81
    _NumericLiteral       go to state 82
    _VarRef               go to state 83
    _ParenthesizedExpr    go to state 84
    _ContextItemExpr      go to state 85
    _FunctionCall         go to state 86
    _KindTest             go to state 87
    _AnyKindTest          go to state 88
    _DocumentTest         go to state 89
    _TextTest             go to state 90
    _CommentTest          go to state 91
    _PITest               go to state 92
    _AttributeTest        go to state 93
    _SchemaAttributeTest  go to state 94
    _ElementTest          go to state 95
    _SchemaElementTest    go to state 96
    _QName                go to state 97


state 2

   61 _UnaryExpr: _MINUS_ . _UnaryExpr

    _PLUS_                         shift, and go to state 1
    _MINUS_                        shift, and go to state 2
    _STAR_                         shift, and go to state 3
    _NCNAME_COLON_STAR_            shift, and go to state 4
    _STAR_COLON_NCNAME_            shift, and go to state 5
    _DOT_                          shift, and go to state 6
    _DOT_DOT_                      shift, and go to state 7
    _STRING_LITERAL_               shift, and go to state 8
    _SLASH_                        shift, and go to state 9
    _SLASHSLASH_                   shift, and go to state 10
    _AXIS_CHILD_                   shift, and go to state 11
    _AXIS_DESCENDANT_              shift, and go to state 12
    _AXIS_PARENT_                  shift, and go to state 13
    _AXIS_ATTRIBUTE_               shift, and go to state 14
    _AXIS_SELF_                    shift, and go to state 15
    _AXIS_DESCENDANT_OR_SELF_      shift, and go to state 16
    _AXIS_ANCESTOR_                shift, and go to state 17
    _AXIS_FOLLOWING_SIBLING_       shift, and go to state 18
    _AXIS_PRECEDING_SIBLING_       shift, and go to state 19
    _AXIS_FOLLOWING_               shift, and go to state 20
    _AXIS_PRECEDING_               shift, and go to state 21
    _AXIS_NAMESPACE_               shift, and go to state 22
    _AXIS_ANCESTOR_OR_SELF_        shift, and go to state 23
    _AT_                           shift, and go to state 24
    _LPAR_                         shift, and go to state 28
    _TEXT_LPAR_                    shift, and go to state 29
    _COMMENT_LPAR_                 shift, and go to state 30
    _NODE_LPAR_                    shift, and go to state 31
    _PROCESSING_INSTRUCTION_LPAR_  shift, and go to state 32
    _ELEMENT_LPAR_                 shift, and go to state 33
    _ATTRIBUTE_LPAR_               shift, and go to state 34
    _SCHEMA_ELEMENT_LPAR_          shift, and go to state 35
    _SCHEMA_ATTRIBUTE_LPAR_        shift, and go to state 36
    _DOCUMENT_NODE_LPAR_           shift, and go to state 37
    _QNAME_LPAR_                   shift, and go to state 39
    _VARNAME_                      shift, and go to state 40
    _QNAME_                        shift, and go to state 41
    _INTEGER_LITERAL_              shift, and go to state 42
    _DECIMAL_LITERAL_              shift, and go to state 43
    _DOUBLE_LITERAL_               shift, and go to state 44

    _UnaryExpr            go to state 99
    _ValueExpr            go to state 65
    _PathExpr             go to state 66
    _RelativePathExpr     go to state 67
    _StepExpr             go to state 68
    _AxisStep             go to state 69
    _ForwardStep          go to state 70
    _ForwardAxis          go to state 71
    _AbbrevForwardStep    go to state 72
    _ReverseStep          go to state 73
    _ReverseAxis          go to state 74
    _AbbrevReverseStep    go to state 75
    _NodeTest             go to state 76
    _NameTest             go to state 77
    _Wildcard             go to state 78
    _FilterExpr           go to state 79
    _PrimaryExpr          go to state 80
    _Literal              go to state 81
    _NumericLiteral       go to state 82
    _VarRef               go to state 83
    _ParenthesizedExpr    go to state 84
    _ContextItemExpr      go to state 85
    _FunctionCall         go to state 86
    _KindTest             go to state 87
    _AnyKindTest          go to state 88
    _DocumentTest         go to state 89
    _TextTest             go to state 90
    _CommentTest          go to state 91
    _PITest               go to state 92
    _AttributeTest        go to state 93
    _SchemaAttributeTest  go to state 94
    _ElementTest          go to state 95
    _SchemaElementTest    go to state 96
    _QName                go to state 97


state 3

   99 _Wildcard: _STAR_ .

    $default  reduce using rule 99 (_Wildcard)


state 4

  100 _Wildcard: _NCNAME_COLON_STAR_ .

    $default  reduce using rule 100 (_Wildcard)


state 5

  101 _Wildcard: _STAR_COLON_NCNAME_ .

    $default  reduce using rule 101 (_Wildcard)


state 6

  119 _ContextItemExpr: _DOT_ .

    $default  reduce using rule 119 (_ContextItemExpr)


state 7

   94 _AbbrevReverseStep: _DOT_DOT_ .

    $default  reduce using rule 94 (_AbbrevReverseStep)


state 8

  112 _Literal: _STRING_LITERAL_ .

    $default  reduce using rule 112 (_Literal)


state 9

   64 _PathExpr: _SLASH_ .
   65          | _SLASH_ . _RelativePathExpr

    _STAR_                         shift, and go to state 3
    _NCNAME_COLON_STAR_            shift, and go to state 4
    _STAR_COLON_NCNAME_            shift, and go to state 5
    _DOT_                          shift, and go to state 6
    _DOT_DOT_                      shift, and go to state 7
    _STRING_LITERAL_               shift, and go to state 8
    _AXIS_CHILD_                   shift, and go to state 11
    _AXIS_DESCENDANT_              shift, and go to state 12
    _AXIS_PARENT_                  shift, and go to state 13
    _AXIS_ATTRIBUTE_               shift, and go to state 14
    _AXIS_SELF_                    shift, and go to state 15
    _AXIS_DESCENDANT_OR_SELF_      shift, and go to state 16
    _AXIS_ANCESTOR_                shift, and go to state 17
    _AXIS_FOLLOWING_SIBLING_       shift, and go to state 18
    _AXIS_PRECEDING_SIBLING_       shift, and go to state 19
    _AXIS_FOLLOWING_               shift, and go to state 20
    _AXIS_PRECEDING_               shift, and go to state 21
    _AXIS_NAMESPACE_               shift, and go to state 22
    _AXIS_ANCESTOR_OR_SELF_        shift, and go to state 23
    _AT_                           shift, and go to state 24
    _LPAR_                         shift, and go to state 28
    _TEXT_LPAR_                    shift, and go to state 29
    _COMMENT_LPAR_                 shift, and go to state 30
    _NODE_LPAR_                    shift, and go to state 31
    _PROCESSING_INSTRUCTION_LPAR_  shift, and go to state 32
    _ELEMENT_LPAR_                 shift, and go to state 33
    _ATTRIBUTE_LPAR_               shift, and go to state 34
    _SCHEMA_ELEMENT_LPAR_          shift, and go to state 35
    _SCHEMA_ATTRIBUTE_LPAR_        shift, and go to state 36
    _DOCUMENT_NODE_LPAR_           shift, and go to state 37
    _QNAME_LPAR_                   shift, and go to state 39
    _VARNAME_                      shift, and go to state 40
    _QNAME_                        shift, and go to state 41
    _INTEGER_LITERAL_              shift, and go to state 42
    _DECIMAL_LITERAL_              shift, and go to state 43
    _DOUBLE_LITERAL_               shift, and go to state 44

    $default  reduce using rule 64 (_PathExpr)

    _RelativePathExpr     go to state 100
    _StepExpr             go to state 68
    _AxisStep             go to state 69
    _ForwardStep          go to state 70
    _ForwardAxis          go to state 71
    _AbbrevForwardStep    go to state 72
    _ReverseStep          go to state 73
    _ReverseAxis          go to state 74
    _AbbrevReverseStep    go to state 75
    _NodeTest             go to state 76
    _NameTest             go to state 77
    _Wildcard             go to state 78
    _FilterExpr           go to state 79
    _PrimaryExpr          go to state 80
    _Literal              go to state 81
    _NumericLiteral       go to state 82
    _VarRef               go to state 83
    _ParenthesizedExpr    go to state 84
    _ContextItemExpr      go to state 85
    _FunctionCall         go to state 86
    _KindTest             go to state 87
    _AnyKindTest          go to state 88
    _DocumentTest         go to state 89
    _TextTest             go to state 90
    _CommentTest          go to state 91
    _PITest               go to state 92
    _AttributeTest        go to state 93
    _SchemaAttributeTest  go to state 94
    _ElementTest          go to state 95
    _SchemaElementTest    go to state 96
    _QName                go to state 97


state 10

   66 _PathExpr: _SLASHSLASH_ . _RelativePathExpr
